# double-AI

./: CMakeLists.txt  README.md
AI/: AI.hpp  BestMoveAI.cpp
main/: MainHead.hpp  main.cpp
user/: User.hpp  UserMoves.cpp
window/: Changes.cpp  MainLoop.cpp  Mouse.cpp  Window.hpp
